[artf627418] - Alignment bug fixed regarding upload font and success msg in 1024*768

--- a/phresco-service-web/src/main/webapp/admin/theme/photon/css/media-queries.css
+++ b/phresco-service-web/src/main/webapp/admin/theme/photon/css/media-queries.css
@@ -82,8 +82,8 @@ Width <= 1024
 	}	
 	
 	.alert_messagelist {
-		margin-left: 60%;
-		width: 23%;
+		margin-left: 56%;
+		width: 35%;
 	}
 	.uploadPluginPopUp { 
 		width: 77%;
